feat/charity api